completed clean up and added confirmation ema too.

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,23 @@ WARMUP_BARS=300
 EMA_SHORT=8
 EMA_LONG=21
 
+# Timeframe Configuration
+SCALP_PRIMARY_TIMEFRAME=1m
+SCALP_CONFIRM_TIMEFRAME=5m
+SCALP_ENABLE_CONFIRM_FILTER=true   # set to false to disable higher timeframe trend gate
+INTRADAY_PRIMARY_TIMEFRAME=5m
+INTRADAY_CONFIRM_TIMEFRAME=15m
+INTRADAY_ENABLE_CONFIRM_FILTER=true # set to false to disable higher timeframe trend gate
+
 # Notifications
 NOTIFIER_WEBHOOK=
 APP_PORT=8000
+
+# SMTP Email (Gmail)
+SMTP_ENABLE=false
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your_gmail_username
+SMTP_PASSWORD=your_gmail_app_password   # Use App Password, not raw account password
+SMTP_FROM=alerts@example.com
+SMTP_TO=recipient@example.com
