Cleaned up and enable confirmation signal

--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,52 @@
-# Upstox API Configuration (Primary)
-UPSTOX_ACCESS_TOKEN=your_upstox_access_token_here
-UPSTOX_API_KEY=your_upstox_api_key_here
-UPSTOX_API_SECRET=your_upstox_api_secret_here
-
 # Database Configuration
-DATABASE_URL=postgresql://user:password@postgres:5432/scalper
+DATABASE_URL=sqlite:///mental_trader.db
 
-# Legacy Broker Configuration (Fallback)
-BROKER_WS_URL=wss://broker-ws.example
-BROKER_REST_URL=https://api.broker.example
-BROKER_API_KEY=your_api_key
-BROKER_API_SECRET=your_api_secret
+# Upstox API Configuration
+UPSTOX_API_KEY=
+UPSTOX_API_SECRET=
+UPSTOX_REDIRECT_URI=
+UPSTOX_AUTH_URL=https://api.upstox.com/index/dialog/authorize
 
 # Trading Configuration
 WATCHLIST=RELIANCE,INFY,ICICIBANK
-WARMUP_BARS=300
+WARMUP_BARS=2400
 EMA_SHORT=8
 EMA_LONG=21
 
-# Timeframe Configuration
-SCALP_PRIMARY_TIMEFRAME=1m
-SCALP_CONFIRM_TIMEFRAME=5m
-SCALP_ENABLE_CONFIRM_FILTER=true   # set to false to disable higher timeframe trend gate
-INTRADAY_PRIMARY_TIMEFRAME=5m
-INTRADAY_CONFIRM_TIMEFRAME=15m
-INTRADAY_ENABLE_CONFIRM_FILTER=true # set to false to disable higher timeframe trend gate
-
 # Notifications
 NOTIFIER_WEBHOOK=
-APP_PORT=8000
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM=
+SMTP_TO=
+SMTP_ENABLE=True
 
-# SMTP Email (Gmail)
-SMTP_ENABLE=false
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your_gmail_username
-SMTP_PASSWORD=your_gmail_app_password   # Use App Password, not raw account password
-SMTP_FROM=alerts@example.com
-SMTP_TO=recipient@example.com
+# Scalper configuration
+SCALP_PRIMARY_TIMEFRAME=1m
+SCALP_CONFIRM_TIMEFRAME=5m
+SCALP_ENABLE_CONFIRM_FILTER=True
+SCALP_ENABLE_SIGNAL_CONFIRMATION=True
+
+# Intraday configuration
+INTRADAY_PRIMARY_TIMEFRAME=5m
+INTRADAY_CONFIRM_TIMEFRAME=15m
+INTRADAY_ENABLE_CONFIRM_FILTER=True
+INTRADAY_ENABLE_SIGNAL_CONFIRMATION=True
+
+# Confirmation pipeline configuration
+CONFIRMATION_RECENT_BARS=750
+CONFIRMATION_REQUIRE_CPR=False
+
+# Option Trading
+OPTION_ENABLE=True
+OPTION_LOT_SIZE=50
+OPTION_RISK_CAP_PER_TRADE=7500.0
+OPTION_OI_MIN_PERCENTILE=60
+OPTION_SPREAD_MAX_PCT_SCALPER=0.015
+OPTION_SPREAD_MAX_PCT_INTRADAY=0.025
+OPTION_DEBOUNCE_SEC=30
+OPTION_DEBOUNCE_INTRADAY_SEC=60
+OPTION_COOLDOWN_SEC=300
+
+# Application
+APP_PORT=8000
