Added news and market sentiment

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,12 @@ pandas
 requests
 matplotlib
 pytest-asyncio
+aiohttp
+feedparser
+transformers
+torch
+openai
+textblob
+vaderSentiment
+beautifulsoup4
+lxml
