Refactored the existing code for options

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,31 @@
-# Database Configuration
+# .env.example for Mental-Trader
+# Copy this file to .env and fill in your secrets and configuration values
+
+# Database
 DATABASE_URL=sqlite:///mental_trader.db
 
-# Upstox API Configuration
+# Upstox API
 UPSTOX_API_KEY=
 UPSTOX_API_SECRET=
 UPSTOX_REDIRECT_URI=
 UPSTOX_AUTH_URL=https://api.upstox.com/index/dialog/authorize
 
-# Trading Configuration
+# Trading
 WARMUP_BARS=2400
-EMA_SHORT=8
-EMA_LONG=21
+SCALPER_EMA_SHORT=8
+SCALPER_EMA_LONG=21
+INTRADAY_EMA_SHORT=8
+INTRADAY_EMA_LONG=21
 
 # Notifications
 NOTIFIER_WEBHOOK=
+
+# Email / SMTP (Gmail)
+SMTP_ENABLE=False
 SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_FROM=
 SMTP_TO=
-SMTP_ENABLE=True
 
 # Scalper configuration
 SCALP_PRIMARY_TIMEFRAME=1m
@@ -32,7 +39,7 @@ INTRADAY_CONFIRM_TIMEFRAME=15m
 INTRADAY_ENABLE_TREND_CONFIRMATION=True
 INTRADAY_ENABLE_SIGNAL_CONFIRMATION=True
 
-# Confirmation pipeline configuration
+# Confirmation pipeline
 CONFIRMATION_RECENT_BARS=750
 CONFIRMATION_REQUIRE_CPR=False
 
@@ -47,5 +54,40 @@ OPTION_DEBOUNCE_SEC=30
 OPTION_DEBOUNCE_INTRADAY_SEC=60
 OPTION_COOLDOWN_SEC=300
 
+# Sentiment Analysis
+SENTIMENT_ENABLE=True
+SENTIMENT_UPDATE_INTERVAL_MINUTES=5
+SENTIMENT_NEWS_HOURS_BACK=6
+
+# News API Keys
+NEWSAPI_KEY=
+ALPHA_VANTAGE_KEY=
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+
+# Sentiment Analysis Settings
+SENTIMENT_MODEL=hybrid
+SENTIMENT_MIN_CONFIDENCE=0.6
+SENTIMENT_THRESHOLD=0.3
+
+# OpenAI
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4
+
+# Sentiment Filter
+SENTIMENT_FILTER_ENABLE_EXTREME_BLOCK=True
+SENTIMENT_FILTER_ENABLE_ALIGNMENT=True
+SENTIMENT_FILTER_EXTREME_THRESHOLD=0.8
+
+# Data Maintenance
+DATA_RETENTION_DAYS=10
+GAP_FILL_ENABLED=True
+CLEANUP_ENABLED=True
+MAINTENANCE_INTERVAL_HOURS=24
+
 # Application
 APP_PORT=8000
+AUTO_START_SCALPER=False
+AUTO_START_SCALPER_INSTRUMENTS=nifty
+AUTO_START_INTRADAY=False
+AUTO_START_INTRADAY_INSTRUMENTS=indices
